data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3046.wast
;; 5. **Test with Maximum Possible Index**:    - **Description**: Use the largest possible integer as the index for the `br_table` instruction. This will test the limits of the index handling mechanism.    - **Relation to Edge Case**: Validates that both implementations handle exceptionally large indices correctly, ensuring consistent return behavior.

(assert_invalid
  (module
    (func $test-max-index-return
      (block 
        (br_table 0xFFFFFFFF (return))
      )
    )
  )
  "type mismatch"
)